--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -72,7 +72,8 @@
         "serialize-error": "^7.0.1",
         "table": "^5.4.6",
         "yargs": "^15.3.1",
-        "accessibility-insights-crawler": "1.0.0"
+        "accessibility-insights-crawler": "1.0.0",
+        "temp-accessibility-insights-report": "C:/Users/ahmohame.REDMOND/Downloads/temp-report-package.tar/temp-report-package"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
