--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -30,7 +30,8 @@
         "@types/cheerio": "^0.22.21",
         "@types/jest": "^26.0.9",
         "@types/node": "^12.12.54",
-        "@types/levelup": "0.0.30",
+        "@types/leveldown": "^4.0.2",
+        "@types/levelup": "^4.3.0",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
@@ -60,7 +61,7 @@
         "sha.js": "^2.4.11",
         "yargs": "^15.3.1",
         "temp-accessibility-insights-report": "C:/Users/ahmohame.REDMOND/Downloads/temp-report-package.tar/temp-report-package",
-        "levelup": "4.4.0",
-        "leveldown": "5.6.0"
+        "leveldown": "^5.6.0",
+        "levelup": "^4.4.0"
     }
 }
