--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -31,6 +31,7 @@
         "@types/jest": "^26.0.9",
         "@types/node": "^12.12.54",
         "@types/leveldown": "^4.0.2",
+        "@types/encoding-down": "^5.0.0",
         "@types/levelup": "^4.3.0",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
@@ -62,6 +63,7 @@
         "yargs": "^15.3.1",
         "temp-accessibility-insights-report": "C:/Users/ahmohame.REDMOND/Downloads/temp-report-package.tar/temp-report-package",
         "leveldown": "^5.6.0",
-        "levelup": "^4.4.0"
+        "levelup": "^4.4.0",
+        "encoding-down": "^6.3.0"
     }
 }
