--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -73,7 +73,7 @@
         "table": "^5.4.6",
         "yargs": "^15.3.1",
         "accessibility-insights-crawler": "1.0.0",
-        "temp-accessibility-insights-report": "C:/Users/ahmohame.REDMOND/Downloads/temp-report-package.tar/temp-report-package"
+        "temp-accessibility-insights-report": "./packages/temp-report-package"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
