--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -61,7 +61,7 @@
         "reflect-metadata": "^0.1.13",
         "sha.js": "^2.4.11",
         "yargs": "^15.3.1",
-        "temp-accessibility-insights-report": "C:/Users/ahmohame.REDMOND/Downloads/temp-report-package.tar/temp-report-package",
+        "temp-accessibility-insights-report": "./packages/temp-report-package",
         "leveldown": "^5.6.0",
         "levelup": "^4.4.0",
         "encoding-down": "^6.3.0"
