--- a/packages/scanner-global-library/package.json
+++ b/packages/scanner-global-library/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "scanner",
+    "name": "scanner-global-library",
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "main": "dist/index.js",
@@ -34,17 +34,15 @@
         "tslint": "^6.1.2",
         "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^3.9.7"
+        "typescript": "^4.0.2"
     },
     "dependencies": {
         "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
-        "common": "1.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
         "puppeteer": "^4.0.0",
-        "reflect-metadata": "^0.1.13",
-        "service-library": "1.0.0"
+        "reflect-metadata": "^0.1.13"
     }
 }
