--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -27,11 +27,12 @@
     },
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
-        "@types/cli-spinner": "^0.2.0",
         "@types/cheerio": "^0.22.21",
+        "@types/cli-spinner": "^0.2.0",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.161",
         "@types/node": "^12.12.54",
+        "@types/normalize-path": "^3.0.0",
         "@types/request-promise": "^4.1.46",
         "@types/table": "^5.0.0",
         "copy-webpack-plugin": "^5.1.1",
@@ -73,7 +74,8 @@
         "table": "^5.4.6",
         "yargs": "^15.3.1",
         "accessibility-insights-crawler": "1.0.0",
-        "path": "0.12.7"
+        "path": "0.12.7",
+        "normalize-path": "^3.0.0"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
