--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "accessibility-insights-scan",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
         "build": "webpack --config ./webpack.config.js --colors",
@@ -35,6 +35,7 @@
         "@types/normalize-path": "^3.0.0",
         "@types/request-promise": "^4.1.46",
         "@types/table": "^5.0.0",
+        "@types/escape-html": "^0.0.20",
         "copy-webpack-plugin": "^5.1.1",
         "fork-ts-checker-webpack-plugin": "^5.1.0",
         "jest": "^26.4.2",
@@ -51,11 +52,13 @@
         "typescript": "^4.0.2",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
-        "webpack-node-externals": "^2.5.1"
+        "webpack-node-externals": "^2.5.1",
+        "accessibility-insights-crawler": "1.0.0"
     },
     "dependencies": {
-        "@types/escape-html": "^0.0.20",
         "accessibility-insights-report": "2.1.1",
+        "apify": "^0.21.4",
+        "apify-shared": "^0.2.12",
         "axe-core": "4.0.1",
         "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
@@ -66,16 +69,17 @@
         "filenamify-url": "^2.1.1",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
+        "leveldown": "^5.6.0",
+        "levelup": "^4.4.0",
+        "normalize-path": "^3.0.0",
+        "path": "0.12.7",
         "pretty": "^2.0.0",
         "puppeteer": "^4.0.0",
         "react-helmet": "^6.1.0",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
         "table": "^5.4.6",
-        "yargs": "^15.3.1",
-        "accessibility-insights-crawler": "1.0.0",
-        "path": "0.12.7",
-        "normalize-path": "^3.0.0"
+        "yargs": "^15.3.1"
     },
     "bin": {
         "ai-scan": "dist/ai-scan-cli.js"
