--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -33,9 +33,6 @@
         "@types/leveldown": "^4.0.2",
         "@types/encoding-down": "^5.0.0",
         "@types/levelup": "^4.3.0",
-        "copy-webpack-plugin": "^5.1.1",
-        "fork-ts-checker-webpack-plugin": "^5.1.0",
-        "npm-dts-webpack-plugin": "^1.3.5",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
@@ -45,9 +42,7 @@
         "tslint": "^6.1.2",
         "tslint-microsoft-contrib": "^6.0.0",
         "typemoq": "^2.1.0",
-        "typescript": "^4.0.2",
-        "webpack": "^4.44.1",
-        "webpack-cli": "^3.3.12"
+        "typescript": "^4.0.2"
     },
     "dependencies": {
         "@medv/finder": "^2.0.0",
