--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,5 +18,7 @@
     "awesomeTypescriptLoaderOptions": {
         "usePrecompiledFiles": true,
         "useWebpackText": true
-    }
+    },
+    "include": ["**/*.ts", "**/*.js", ".eslintrc.js"],
+    "exclude": ["**/dist/*", "**/node_modules/*"]
 }
