--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -15,7 +15,7 @@
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
             "smartStep": true,
-            "args": ["--crawl", "--url", "https://www.bing.com/", "--maxUrls", "3", "--restart", "--simulate"]
+            "args": ["--crawl", "--url", "https://support.xbox.com/", "--maxUrls", "3", "--restart", "--simulate"]
         }
     ]
 }
