--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "codecov": "^3.7.2",
         "eslint": "^7.9.0",
         "eslint-plugin-import": "^2.22.0",
+        "eslint-plugin-jest": "^24.0.2",
         "eslint-plugin-jsdoc": "^30.5.1",
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-unicorn": "^22.0.0",
