--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -6,8 +6,8 @@
         "build": "tsc && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
-        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+        "lint": "eslint -c ../../.eslintrc.js --ext .ts ./",
+        "lint:fix": "eslint --fix -c ../../.eslintrc.js --ext .ts ./",
         "test": "jest --coverage --colors"
     },
     "repository": {
@@ -29,6 +29,7 @@
         "@types/yargs": "^15.0.5",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
+        "jest-extended": "^0.11.2",
         "jest-junit": "^11.1.0",
         "mockdate": "^3.0.2",
         "rimraf": "^3.0.2",
