--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -6,8 +6,8 @@
         "build": "webpack --config ./webpack.config.js --config-name web-api --colors",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
-        "lint": "tslint -c ../../tslint.json -p ./tsconfig.json",
-        "lint:fix": "tslint --fix -c ../../tslint.json -p ./tsconfig.json --force",
+        "lint": "eslint -c ../../.eslintrc.js --ext .ts ./",
+        "lint:fix": "eslint --fix -c ../../.eslintrc.js --ext .ts ./",
         "test": "jest --coverage --colors",
         "watch": "tsc --w",
         "start:host": "func start",
