--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "eslint-plugin-jest": "^24.0.2",
         "eslint-plugin-jsdoc": "^30.5.1",
         "eslint-plugin-prefer-arrow": "^1.2.2",
+        "eslint-plugin-security": "^1.4.0",
         "eslint-plugin-unicorn": "^22.0.0",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
