migrate to axe-puppeteer

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,13 +29,14 @@
     "devDependencies": {
         "@types/cheerio": "^0.22.21",
         "@types/cli-spinner": "^0.2.0",
+        "@types/escape-html": "^0.0.20",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.161",
         "@types/node": "^12.12.54",
         "@types/normalize-path": "^3.0.0",
         "@types/request-promise": "^4.1.46",
         "@types/table": "^5.0.0",
-        "@types/escape-html": "^0.0.20",
+        "accessibility-insights-crawler": "1.0.0",
         "copy-webpack-plugin": "^5.1.1",
         "fork-ts-checker-webpack-plugin": "^5.2.0",
         "jest": "^26.4.2",
@@ -44,6 +45,7 @@
         "mkdirp": "^1.0.4",
         "mockdate": "^3.0.2",
         "rimraf": "^3.0.2",
+        "scanner-global-library": "1.0.0",
         "shebang-loader": "^0.0.1",
         "ts-jest": "^26.3.0",
         "tslint": "^6.1.2",
@@ -52,16 +54,14 @@
         "typescript": "^4.0.2",
         "webpack": "^4.44.1",
         "webpack-cli": "^3.3.12",
-        "webpack-node-externals": "^2.5.1",
-        "accessibility-insights-crawler": "1.0.0",
-        "scanner-global-library": "1.0.0"
+        "webpack-node-externals": "^2.5.1"
     },
     "dependencies": {
+        "@axe-core/puppeteer": "^4.0.0",
         "accessibility-insights-report": "2.1.2",
         "apify": "^0.21.4",
         "apify-shared": "^0.2.12",
         "axe-core": "4.0.1",
-        "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
         "cli-spinner": "^0.2.10",
         "dotenv": "^8.2.0",
@@ -69,9 +69,9 @@
         "filenamify": "^4.1.0",
         "filenamify-url": "^2.1.1",
         "inversify": "^5.0.1",
-        "lodash": "^4.17.20",
         "leveldown": "^5.6.0",
         "levelup": "^4.4.0",
+        "lodash": "^4.17.20",
         "normalize-path": "^3.0.0",
         "path": "0.12.7",
         "pretty": "^2.0.0",
