--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -20,7 +20,7 @@ update_configs:
                 # package is deployed on a server as stand-alone
                 # and will require update of deployment script
                 # that is not part of dependabot auto-update
-                dependency_name: 'axe-puppeteer'
+                dependency_name: '@axe-core/puppeteer'
           - match:
                 # keep node types lock to match with node v12
                 dependency_name: '@types/node'
