--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -28,11 +28,11 @@
         "@rollup/plugin-commonjs": "^15.1.0",
         "@rollup/plugin-node-resolve": "^9.0.0",
         "@types/cheerio": "^0.22.21",
-        "@types/jest": "^26.0.9",
-        "@types/node": "^12.12.54",
-        "@types/leveldown": "^4.0.2",
         "@types/encoding-down": "^5.0.0",
+        "@types/jest": "^26.0.9",
+        "@types/leveldown": "^4.0.2",
         "@types/levelup": "^4.3.0",
+        "@types/node": "^12.12.54",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
@@ -45,25 +45,25 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "@axe-core/puppeteer": "^4.0.0",
         "@medv/finder": "^2.0.0",
         "accessibility-insights-report": "2.1.2",
         "apify": "^0.21.4",
         "apify-shared": "^0.2.12",
         "axe-core": "4.0.1",
-        "axe-puppeteer": "^1.1.0",
         "cheerio": "^1.0.0-rc.3",
         "common": "1.0.0",
-        "scanner-global-library": "1.0.0",
         "dotenv": "^8.2.0",
+        "encoding-down": "^6.3.0",
         "inversify": "^5.0.1",
+        "leveldown": "^5.6.0",
+        "levelup": "^4.4.0",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
         "puppeteer": "^4.0.0",
         "reflect-metadata": "^0.1.13",
+        "scanner-global-library": "1.0.0",
         "sha.js": "^2.4.11",
-        "yargs": "^15.3.1",
-        "leveldown": "^5.6.0",
-        "levelup": "^4.4.0",
-        "encoding-down": "^6.3.0"
+        "yargs": "^15.3.1"
     }
 }
