--- a/packages/scanner-global-library/package.json
+++ b/packages/scanner-global-library/package.json
@@ -37,8 +37,8 @@
         "typescript": "^4.0.2"
     },
     "dependencies": {
+        "@axe-core/puppeteer": "^4.0.0",
         "axe-core": "4.0.1",
-        "axe-puppeteer": "^1.1.0",
         "common": "1.0.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
