--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -50,11 +50,11 @@
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
+        "@axe-core/puppeteer": "^4.0.0",
         "@azure/cosmos": "^3.9.1",
         "accessibility-insights-report": "2.1.2",
         "applicationinsights": "^1.8.7",
         "axe-core": "4.0.1",
-        "axe-puppeteer": "^1.1.0",
         "axe-sarif-converter": "^2.5.1",
         "azure-services": "^1.0.0",
         "common": "1.0.0",
