--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "npm-run-all": "^4.1.5",
         "prettier": "2.0.5",
         "syncpack": "^5.2.5",
+        "tslint": "^6.1.3",
         "typescript": "^4.0.2"
     },
     "workspaces": {
