--- a/packages/web-api-send-notification-job-manager/package.json
+++ b/packages/web-api-send-notification-job-manager/package.json
@@ -31,6 +31,7 @@
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
+        "node-loader": "^1.0.1",
         "npm-run-all": "^4.1.5",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.3.0",
