--- a/packages/web-api/package.json
+++ b/packages/web-api/package.json
@@ -38,6 +38,7 @@
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
+        "node-loader": "^1.0.1",
         "npm-run-all": "^4.1.5",
         "raw-body": "^2.4.1",
         "rimraf": "^3.0.2",
