add notice to cli package.json

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -16,7 +16,8 @@
     "files": [
         "dist/",
         "../../LICENSE",
-        "README.md"
+        "README.md",
+        "NOTICE.html"
     ],
     "repository": "git+https://github.com/Microsoft/accessibility-insights-service.git",
     "main": "dist/index.js",
