disable manual trigger for CG tasks

--- a/azure-pipeline/build-artifacts-and-run-tests-job.yaml
+++ b/azure-pipeline/build-artifacts-and-run-tests-job.yaml
@@ -24,11 +24,11 @@ steps:
       displayName: 'Component Detection'
       inputs:
           failOnAlert: true
-      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual')
+      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI')
 
     - task: msospo.ospo-extension.8d7f9abb-6896-461d-9e25-4f74ed65ddb2.notice@0
       displayName: 'generate NOTICE.html file'
-      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'Manual')
+      condition: in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI')
       inputs:
           outputfile: $(System.DefaultWorkingDirectory)/packages/cli/NOTICES.html
           outputformat: html
