--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-security": "^1.4.0",
         "eslint-plugin-unicorn": "^22.0.0",
+        "eslint-plugin-node": "^11.1.0",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-extended": "^0.11.2",
