--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -25,8 +25,8 @@
         "@types/convict": "^5.2.1",
         "@types/jest": "^26.0.9",
         "@types/node": "^12.12.54",
-        "@types/wtfnode": "^0.7.0",
         "@types/sha.js": "^2.4.0",
+        "@types/wtfnode": "^0.7.0",
         "jest": "^26.4.2",
         "jest-circus": "^26.4.0",
         "jest-junit": "^11.1.0",
@@ -38,6 +38,7 @@
     "dependencies": {
         "@sindresorhus/fnv1a": "^2.0.1",
         "convict": "^6.0.0",
+        "got": "^11.7.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "reflect-metadata": "^0.1.13",
