--- a/packages/web-api-send-notification-runner/package.json
+++ b/packages/web-api-send-notification-runner/package.json
@@ -22,10 +22,9 @@
     "homepage": "https://github.com/Microsoft/accessibility-insights-service#readme",
     "devDependencies": {
         "@types/dotenv": "^8.2.0",
+        "@types/got": "^9.6.11",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.161",
-        "@types/request": "^2.48.5",
-        "@types/request-promise": "^4.1.46",
         "@types/node": "^12.12.54",
         "@types/puppeteer": "^3.0.0",
         "@types/sha.js": "^2.4.0",
@@ -52,12 +51,11 @@
         "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
+        "got": "^11.7.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
-        "request": "^2.88.2",
-        "request-promise": "^4.2.6",
         "service-library": "1.0.0",
         "sha.js": "^2.4.11",
         "storage-documents": "1.0.0",
