--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -22,9 +22,9 @@
     },
     "homepage": "https://github.com/manishsat/accessibility-insights-service#readme",
     "devDependencies": {
+        "@types/got": "^9.6.11",
         "@types/jest": "^26.0.9",
         "@types/lodash": "^4.14.161",
-        "@types/request": "^2.48.5",
         "@types/verror": "^1.10.4",
         "@types/yargs": "^15.0.5",
         "copy-webpack-plugin": "^5.1.1",
@@ -52,14 +52,13 @@
         "@azure/storage-queue": "^10.1.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
+        "got": "^11.7.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
         "logger": "1.0.0",
         "moment": "^2.29.0",
         "pretty-format": "^26.1.0",
         "reflect-metadata": "^0.1.13",
-        "request": "^2.88.2",
-        "request-promise": "^4.2.6",
         "storage-documents": "1.0.0",
         "verror": "^1.10.0"
     }
