Added ci test script

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "cbuild": "npx syncpack fix-mismatches format --indent '    ' && yarn install && npx lerna run cbuild --stream",
         "build": "npx lerna run build --stream",
         "pack": "npx lerna run pack --stream",
-        "test": "npx jest --config jest.ci.js --totalTestSlices=4 --testSlicesToRun=[1,2,3]",
+        "test": "npx jest",
+        "test:ci": "npx jest --config jest.ci.js --totalTestSlices=4 --testSlicesToRun=[1,2,3]",
         "publish-code-coverage": "npx codecov",
         "test:e2e": "npx jest functional-tests.local.spec.ts",
         "lint:check": "npx lerna run lint --stream",
