add scanNotifyUrl to ScanRunRequest in ai-scan-api.yaml

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -143,6 +143,8 @@ components:
                         value is 0.
                     default: 0
                     type: integer
+                scanNotifyUrl:
+                    type: string
                 site:
                     type: object
                     required:
