--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -46,7 +46,7 @@
         "@azure/batch": "^7.0.0",
         "@azure/cosmos": "^3.9.1",
         "@azure/identity": "^1.1.0",
-        "@azure/keyvault": "^0.1.0",
+        "@azure/keyvault-secrets": "^4.1.0",
         "@azure/ms-rest-nodeauth": "^1.1.1",
         "@azure/storage-blob": "12.2.1",
         "@azure/storage-queue": "^10.1.0",
