--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,6 +37,7 @@
         "@types/table": "^6.0.0",
         "accessibility-insights-crawler": "1.0.0",
         "axe-result-converter": "1.0.0",
+        "common": "1.0.0",
         "copy-webpack-plugin": "^5.1.1",
         "dts-bundle-generator": "^5.4.0",
         "fork-ts-checker-webpack-plugin": "^5.2.0",
