update tenant id

--- a/packages/resource-deployment/templates/function-web-api-app-template.json
+++ b/packages/resource-deployment/templates/function-web-api-app-template.json
@@ -141,7 +141,7 @@
                         "tokenStoreEnabled": true,
                         "defaultProvider": "AzureActiveDirectory",
                         "clientId": "[parameters('clientId')]",
-                        "issuer": "[concat('https://sts.windows.net/', parameters('tenantId'), '/')]"
+                        "issuer": "[concat('https://sts.windows.net/', subscription().tenantId, '/')]"
                     }
                 }
             ]
