Serialize hashSets when storing as blob, add method to create new CombinedScanResults if it doesn't exist

--- a/packages/storage-documents/package.json
+++ b/packages/storage-documents/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "axe-result-converter": "^1.0.0",
+        "common": "^1.0.0",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.13"
     }
