--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -40,6 +40,7 @@
     "dependencies": {
         "@azure/cosmos": "^3.9.3",
         "@azure/functions": "^1.2.2",
+        "axe-result-converter": "^1.0.0",
         "azure-services": "^1.0.0",
         "common": "1.0.0",
         "dotenv": "^8.2.0",
