--- a/packages/storage-documents/package.json
+++ b/packages/storage-documents/package.json
@@ -33,6 +33,8 @@
         "typescript": "^4.1.2"
     },
     "dependencies": {
+        "axe-result-converter": "^1.0.0",
+        "common": "^1.0.0",
         "inversify": "^5.0.1",
         "reflect-metadata": "^0.1.13"
     }
