--- a/packages/service-library/package.json
+++ b/packages/service-library/package.json
@@ -42,7 +42,7 @@
         "@azure/functions": "^1.2.2",
         "axe-result-converter": "^1.0.0",
         "azure-services": "^1.0.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
