--- a/packages/azure-services/package.json
+++ b/packages/azure-services/package.json
@@ -49,7 +49,7 @@
         "@azure/ms-rest-nodeauth": "^3.0.6",
         "@azure/storage-blob": "12.2.1",
         "@azure/storage-queue": "^12.2.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "got": "^11.8.0",
         "inversify": "^5.0.1",
