--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -36,8 +36,8 @@
         "@types/normalize-path": "^3.0.0",
         "@types/table": "^6.0.0",
         "accessibility-insights-crawler": "1.0.0",
-        "axe-result-converter": "1.0.0",
-        "common": "1.0.0",
+        "axe-result-converter": "^1.0.0",
+        "common": "^1.0.0",
         "copy-webpack-plugin": "^6.3.2",
         "dts-bundle-generator": "^5.5.0",
         "fork-ts-checker-webpack-plugin": "^6.0.4",
