--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -50,7 +50,7 @@
         "apify-shared": "^0.5.0",
         "axe-core": "4.0.2",
         "cheerio": "^1.0.0-rc.3",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "encoding-down": "^6.3.0",
         "inversify": "^5.0.1",
