--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -36,7 +36,7 @@
     },
     "dependencies": {
         "applicationinsights": "^1.8.8",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
