--- a/packages/web-api-scan-job-manager/package.json
+++ b/packages/web-api-scan-job-manager/package.json
@@ -46,7 +46,7 @@
         "@azure/batch": "^8.0.0",
         "@azure/ms-rest-nodeauth": "^3.0.6",
         "azure-services": "^1.0.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "inversify": "^5.0.1",
         "lodash": "^4.17.20",
