--- a/packages/web-api-scan-request-sender/package.json
+++ b/packages/web-api-scan-request-sender/package.json
@@ -41,7 +41,7 @@
     "dependencies": {
         "applicationinsights": "^1.8.8",
         "azure-services": "^1.0.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "inversify": "^5.0.1",
         "logger": "1.0.0",
         "reflect-metadata": "^0.1.13",
