--- a/packages/web-api-send-notification-runner/package.json
+++ b/packages/web-api-send-notification-runner/package.json
@@ -49,7 +49,7 @@
     "dependencies": {
         "@azure/cosmos": "^3.9.3",
         "azure-services": "^1.0.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "dotenv": "^8.2.0",
         "got": "^11.8.0",
         "inversify": "^5.0.1",
