--- a/packages/web-workers/package.json
+++ b/packages/web-workers/package.json
@@ -50,7 +50,7 @@
     },
     "dependencies": {
         "azure-services": "^1.0.0",
-        "common": "1.0.0",
+        "common": "^1.0.0",
         "durable-functions": "^1.4.3",
         "functional-tests": "1.0.0",
         "inversify": "^5.0.1",
