--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -80,6 +80,7 @@
         "moment": "^2.29.1",
         "normalize-path": "^3.0.0",
         "puppeteer": "^5.5.0",
+        "raw-body": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
         "sha.js": "^2.4.11",
