--- a/packages/web-api-scan-runner/package.json
+++ b/packages/web-api-scan-runner/package.json
@@ -55,6 +55,7 @@
         "applicationinsights": "^1.8.8",
         "axe-core": "4.0.2",
         "axe-sarif-converter": "^2.6.0",
+        "axe-result-converter": "^1.0.0",
         "azure-services": "^1.0.0",
         "common": "^1.0.0",
         "dotenv": "^8.2.0",
