feat(axe-core-4.1.1): treat *all* external node modules as external during ai-scan bundling (#1178)
#### Description of changes

Before this PR, the CLI's webpack configuration used a hardcoded list of "externals" when bundling the CLI bundle and the default `nodeExternals()` output as externals when bundling the index.js entry point.

Neither of these strategies are ideal:

* `nodeExternals()` doesn't understand monorepos by default; in particular, it only looks looks for modules present under the immediate package's `node_modules` folder, *not* any lifted packages under the repo-root `node_modules`. If you naively add the root-level `node_modules` as an `additionalModuleDir`, you'll find that it also does not understand *not* to treat other packages within the monorepo that are symlinked under the root `node_modules` as external, which doesn't work for us because we don't publish the intermediate monorepo packages (we intentionally bundle them).
* The hard-coded list is fragile; we have several transitive dependencies that include native (ie, arch/platform-specific) modules, which cause hard-to-detect errors if they are accidentally missed from the list (the project will build fine and may even run fine via `node dist/ai-scan-cli.js`, but when packed and used from a consumer outside the monorepo, will produce confusing errors about "missing an arch for a node-gyp-build import'.
* The hard-coded list causes us to over-bundle; right now, the distributed package bundles most dependencies (everything not in the hard-coded list) rather than expressing it as a package.json dependency, which is not great; distributing more code than we have to increases our legal and technical liability and causes consumers to install 2 copies of any dependencies we bundle that they'd have pulled down non-bundled for other reasons.

I believe a better strategy than both of the current options would be to bundle *only* other packages defined in the service monorepo and treat as 

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -58,23 +58,35 @@
     },
     "dependencies": {
         "@axe-core/puppeteer": "^4.0.0",
+        "@medv/finder": "^2.0.0",
+        "@sindresorhus/fnv1a": "^2.0.1",
         "accessibility-insights-report": "3.0.1",
         "apify": "^0.21.8",
         "apify-shared": "^0.5.0",
+        "applicationinsights": "^1.8.8",
         "axe-core": "4.0.2",
         "cheerio": "^1.0.0-rc.3",
         "cli-spinner": "^0.2.10",
+        "convict": "^6.0.0",
         "dotenv": "^8.2.0",
+        "encoding-down": "^6.3.0",
         "filenamify": "^4.1.0",
         "filenamify-url": "^2.1.1",
+        "got": "^11.8.0",
         "inversify": "^5.0.1",
         "leveldown": "^5.6.0",
         "levelup": "^4.4.0",
         "lodash": "^4.17.20",
+        "moment": "^2.29.1",
         "normalize-path": "^3.0.0",
         "puppeteer": "^5.5.0",
+        "raw-body": "^2.4.1",
         "reflect-metadata": "^0.1.13",
         "serialize-error": "^7.0.1",
+        "sha.js": "^2.4.11",
+        "uuid-with-v6": "^1.1.2",
+        "verror": "^1.10.0",
+        "wtfnode": "^0.8.3",
         "yargs": "^16.1.1"
     },
     "bin": {
