add e2e-web-apis to vscode workspace and publish in azure pipeline

--- a/azure-pipeline/build-artifacts-and-run-tests-job.yaml
+++ b/azure-pipeline/build-artifacts-and-run-tests-job.yaml
@@ -36,6 +36,7 @@ steps:
               resource-deployment/dist/**/*
               web-api/dist/**/*
               web-workers/dist/**/*
+              e2e-web-apis/dist/**/*
               functional-tests/dist/**/*
               health-client/dist/**/*
               cli/drop/*
