--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     },
     "resolutions": {
         "axe-core": "4.1.1",
-        "serialize-javascript": "^3.0.0",
-        "marked": "1.1.1",
-        "apify-shared": ">=0.5.0"
+        "apify-shared": ">=0.5.0",
+        "axios": ">=0.21.1"
     }
 }
