--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -3,7 +3,7 @@
     "version": "0.6.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "webpack --config ./webpack.config.js --colors",
+        "build": "webpack --config ./webpack.config.js",
         "cbuild": "npm-run-all --serial clean build",
         "pack": "npm-run-all --serial create-drop-dir pack-to-drop-dir",
         "pack-to-drop-dir": "yarn pack --filename drop/cli.tgz",
