Expand scan request REST API to accept crawl request metadata

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -145,6 +145,10 @@ components:
                     type: integer
                 scanNotifyUrl:
                     type: string
+                deepScan:
+                    type: boolean
+                    description: Enable crawling and scanning of website's pages under baseURL provided
+                    default: false
                 site:
                     type: object
                     required:
@@ -153,6 +157,11 @@ components:
                         baseUrl:
                             description: The web site root URL to be displayed in 'Scan Details' report section
                             type: string
+                        knownPages:
+                            description: List of known website's pages to include in a deep scan run in an addition to pages are discovered by crawling
+                            type: array
+                            items:
+                                type: string
                 reportGroups:
                     type: array
                     items:
@@ -189,6 +198,33 @@ components:
                     type: integer
                     format: int32
                     minimum: 0
+        deepScanResult:
+            type: array
+            items:
+                required:
+                    - scanId
+                    - url
+                    - scanRunState
+                properties:
+                    scanId:
+                        type: string
+                    url:
+                        type: string
+                    scanRunState:
+                        type: string
+                        enum:
+                            - pending
+                            - accepted
+                            - queued
+                            - running
+                            - completed
+                            - failed
+                    scanResultState:
+                        type: string
+                        enum:
+                            - pending
+                            - pass
+                            - fail
         Links:
             type: object
             required:
@@ -264,6 +300,8 @@ components:
                     type: string
                 scanResult:
                     $ref: '#/components/schemas/ScanResult'
+                deepScanResult:
+                    $ref: '#/components/schemas/deepScanResult'
                 reports:
                     type: array
                     items:
