--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -3,9 +3,7 @@
     "version": "1.0.0",
     "description": "This project welcomes contributions and suggestions.  Most contributions require you to agree to a Contributor License Agreement (CLA) declaring that you have the right to, and actually do, grant us the rights to use your contribution. For details, visit https://cla.microsoft.com.",
     "scripts": {
-        "build": "npm-run-all --serial build:ts build:imports",
-        "build:ts": "tsc && echo",
-        "build:imports": "rollup -c",
+        "build": "tsc && rollup -c && echo",
         "cbuild": "npm-run-all --serial clean build",
         "clean": "rimraf dist test-results",
         "lint": "eslint -c ../../.eslintrc.js --ext .ts ./",
