Add description to deepScan in contract
Co-authored-by: AhmedAbdoOrtiga <45858632+AhmedAbdoOrtiga@users.noreply.github.com>

--- a/packages/api-contracts/ai-scan-api.yaml
+++ b/packages/api-contracts/ai-scan-api.yaml
@@ -147,6 +147,7 @@ components:
                     type: string
                 deepScan:
                     type: boolean
+                    description: Enable crawling and scanning of website's pages under baseURL provided
                 site:
                     type: object
                     required:
